infra/authentik/networking/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: authentik-gateway
  namespace: authentik
spec:
  gatewayClassName: envoy-gateway
  listeners:
    # Authentik (Internal)
    - name: authentik
      hostname: "auth.darak.dev"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - name: authentik-cert-tls
            namespace: authentik
