infra/authentik/networking/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-route
  namespace: authentik
spec:
  parentRefs:
  - name: authentik-gateway
    namespace: authentik
  hostnames:
  - "auth.darak.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: authentik-server
        port: 80
